--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-mongo": "^2.0.1",
     "cors": "2.7.1",
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
